{
    "name": "PlayerInputAction",
    "maps": [
        {
            "name": "VRPlayer",
            "id": "dc23b6e9-aaa6-4cab-a8eb-7c583796a989",
            "actions": [
                {
                    "name": "HMDPosition",
                    "type": "Value",
                    "id": "fc537ef3-abd0-4671-97a4-87a9d93174bd",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "HMDRotation",
                    "type": "Value",
                    "id": "5b98faf8-6dc3-436f-b789-69eb314faaaa",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftControllerPosition",
                    "type": "Value",
                    "id": "bb1ee718-64b3-41c8-ab00-43ef0f46e715",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftControllerRotation",
                    "type": "Value",
                    "id": "332ff248-520a-4213-a789-e60978720acf",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftControllerBoost",
                    "type": "Button",
                    "id": "f2214fd4-dfc6-4c96-9c11-ece06dd3f213",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftControllerGrab",
                    "type": "Button",
                    "id": "9088a1ad-24f8-47eb-b1b6-7ee845358d98",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftControllerUse",
                    "type": "Button",
                    "id": "e055e1fe-b8bd-4292-aefd-6ca70b0a5f7e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightControllerPosition",
                    "type": "Value",
                    "id": "8e5c63dd-9c4c-425d-900d-a52713b08ded",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightControllerRotation",
                    "type": "Value",
                    "id": "4419f09d-754b-41a4-a3d2-80ff01eb8bee",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightControllerBoost",
                    "type": "Button",
                    "id": "3dabf986-5deb-4fa7-af5d-eda23e4652e7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightControllerGrab",
                    "type": "Button",
                    "id": "8827996b-c71b-48b2-a98c-9e2f7e464c43",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightControllerUse",
                    "type": "Button",
                    "id": "2576e6b1-af0b-4712-b80d-fdf25f880df5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Rotate",
                    "type": "Value",
                    "id": "11630baa-ed49-419e-9815-6f72d381a6f4",
                    "expectedControlType": "Vector2",
                    "processors": "StickDeadzone",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7aff64f7-8268-4c4d-b51e-8e0e237a7ba1",
                    "path": "<XRHMD>/devicePosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HMDPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fa376afd-a495-4a4b-a793-81a841e60e02",
                    "path": "<XRHMD>/deviceRotation",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HMDRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "98202d34-0345-4646-a5dd-79b29aab4e78",
                    "path": "<XRController>{LeftHand}/devicePosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftControllerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6e4c4904-c7c0-4f85-b5bf-44b1065f0de0",
                    "path": "<XRController>{LeftHand}/deviceRotation",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftControllerRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "505af07e-be32-4eb2-9b74-60a80f1f83c0",
                    "path": "<XRController>{RightHand}/devicePosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightControllerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cb0937e9-ec4f-4612-9c2e-e72b2ac74e9d",
                    "path": "<XRController>{RightHand}/deviceRotation",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightControllerRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0a799290-7997-4ecb-ac15-adbacbc35e47",
                    "path": "<XRController>{RightHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightControllerBoost",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "35b3e703-9e01-4b56-97f2-589d3c4aa835",
                    "path": "<XRController>{RightHand}/touchpadClicked",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightControllerBoost",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f3fb1f9c-2431-4c2c-a3ce-30130d002ba8",
                    "path": "<XRController>{RightHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightControllerGrab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2400ab75-8462-4875-b5d9-581dd7d4d67f",
                    "path": "<XRController>{RightHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightControllerUse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "85bd0fd9-b09c-4c86-a61c-09ae86fbc37b",
                    "path": "<XRController>{LeftHand}/touchpadTouched",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftControllerBoost",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "78d4cfb8-ed03-421d-9534-57f509bb4363",
                    "path": "<XRController>{LeftHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftControllerGrab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8ecbd44a-97bd-46b4-8913-07607212e36c",
                    "path": "<XRController>{LeftHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftControllerUse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ece1927a-ead6-4a3c-a07f-2ee154656c51",
                    "path": "<XRController>{RightHand}/joystick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "256c4fcc-85ba-4d21-99c4-42bccc754c4e",
                    "path": "<ViveWand>{RightHand}/trackpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}